<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:padding="24dp"
    android:id="@+id/register">

    <!-- Logo -->
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/app_name"
        app:tint="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Email Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/email"
        app:hintTextColor="?attr/colorSecondary"
        android:textColorHint="?attr/colorOnSurface"
        app:boxBackgroundColor="?attr/colorSurface"
        app:boxStrokeColor="?attr/colorSecondary"
        app:layout_constraintTop_toBottomOf="@id/appLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="?attr/colorOnSurface" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:hintTextColor="?attr/colorSecondary"
        android:textColorHint="?attr/colorOnSurface"
        app:boxBackgroundColor="?attr/colorSurface"
        app:boxStrokeColor="?attr/colorSecondary"
        app:passwordToggleTint="?attr/colorSecondary"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextEdit2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="?attr/colorOnSurface" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password 2nd Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password2Layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/repeat_password"
        app:hintTextColor="?attr/colorSecondary"
        android:textColorHint="?attr/colorOnSurface"
        app:boxBackgroundColor="?attr/colorSurface"
        app:boxStrokeColor="?attr/colorSecondary"
        app:passwordToggleTint="?attr/colorSecondary"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextEdit3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="?attr/colorOnSurface" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Register Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/sign_up"
        android:textColor="?attr/colorOnSecondary"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/password2Layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>